# zzdns

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
config/: config.json  domain.txt
zcacher/: Cargo.toml
zcacher/src/: cacher.rs  lib.rs
zconfig/: Cargo.toml
zconfig/src/: config.rs  lib.rs
zpreloader/: Cargo.toml
zpreloader/src/: lib.rs  preloader.rs
zqueue/: Cargo.toml
zqueue/src/: base.rs  lib.rs  request.rs  response.rs
zresolver/: Cargo.toml
zresolver/src/: lib.rs  resolver.rs
zserver/: Cargo.toml
zserver/src/: base.rs  lib.rs  udp.rs
zspeedtest/: Cargo.toml
zspeedtest/src/: lib.rs  speedtest.rs
zupstream/: Cargo.toml
zupstream/src/: base.rs  https.rs  lib.rs  udp.rs  upstream.rs
zworker/: Cargo.toml
zworker/src/: lib.rs  worker.rs
zzdns/: main.rs
