[package]
name = "zpreloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zcacher = {path = "../zcacher"}

log = {version="0.4.17"}
tokio = { version = "1.21.2", default-features=false, features = ["fs"] }
