[package]
name = "zqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", default-features=false, features = ["macros", "rt-multi-thread", "sync", "net", "fs", "signal", "time"] }
async-trait = {version="0.1.57"}
anyhow = {version="1.0.65"}
bytes = {version = "1.2.1"}
async-channel = {version = "1.7.1"}
