[package]
name = "zresolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zupstream = { path = "../zupstream"}
zcacher = { path = "../zcacher"}

anyhow = {version="1.0.65"}
bytes = {version = "1.2.1"}
domain = {version = "0.7.1", features = ["bytes"]}
stretto = { version = "0.7.1", features = ["async"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "net", "fs", "signal", "time"] }
log = {version="0.4.17"}