[package]
name = "zupstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zconfig = {path = "../zconfig"}


tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "net", "fs", "signal", "time"] }
async-trait = {version="0.1.57"}
bytes = {version = "1.2.1"}
anyhow = {version="1.0.65"}
domain = {version = "0.7.1", features = ["bytes"]}
dyn-clone = {version = "1.0.9"}
reqwest = {version = "0.11.12", features = ["json"]}