[package]
name = "zworker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zqueue = { path = "../zqueue"}
zresolver = { path = "../zresolver"}

log = {version="0.4.17"}
async-trait = {version = "0.1.57"}
anyhow = {version="1.0.65"}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "net", "fs", "signal", "time"] }
bytes = {version = "1.2.1"}
stretto = { version = "0.7.1", features = ["async"] }